src/sass/components/_selectedMedia.scss
.media-hero {
  @extend .flex-col-center;
  text-align: center;
  padding: 0.5rem;
  z-index: 1;
  background-position: top;
  background-size: cover;
  background-repeat: no-repeat;
  height: 450px;
  overflow: hidden;

  .overlay {
    background: linear-gradient(to top, #000000, #000000f1, #00000010);
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
  }
}

.hero-selected-media {
  @extend .flex-col-center;
  gap: 2rem;
  z-index: 5;
  width: 100%;
  text-align: left;
  font-size: 70%;
  position: absolute;
  top: 0;
  padding-block-end: 5rem;

  
  @media #{$sm} {
    top: 55px;
  }
  @media #{$md} {
    font-size: 90%;
    top: 50px;
  }
  h1 {
    font-size: 190%;
  }
  img {
    width: 25%;
    height: 100%;
    border-radius: 15px;
    object-fit: cover;

    @media #{$sm} {
      width: 20%;
    }
    @media #{$md} {
      width: 17%;
    }
    @media #{$lg} {
      width: 16%;
    }
  }
  .bi-arrow-left {
    align-self: flex-start;
    margin-inline-start: 1.3rem;
    font-size: 140%;    
    margin-top: 20px;
    
    &:hover{
      color: #ffffffdf;
      transform: translate(-1px);
    }
  }
  button {
    background-color: #121212e5;
    border: 1px solid white;
    padding: 0.4rem 1.5rem;
    &:hover {
      background-color: #2b2b2bca;
    }
  }
}

.selected-media-info-container {
  display: flex;
  justify-content: start;
  gap: 1.3rem;
  width: 100%;
  padding-inline: .5rem;
  @media #{$md} {
    padding-inline: 1rem;
  }
  .selected-media-info {
    justify-content: start;
    display: flex;
    flex-direction: column;
    gap: 0.4rem;

    .options {
      display: flex;
      align-items: center;
      justify-content: start;
      gap: 1rem;
    }
  }

  .info {
    display: flex;
    gap: 0.3rem;

    span {
      background-color: #59595958;
      padding: 0.2rem 0.5rem;
      border-radius: 25px;
    }
  }
}
.overview {
  height: 80px;
  overflow: auto;

  &_data {
    max-width: 700px;
  }
}

.tabs{
  width: 100%;
}
.selected-media-cast {
  width: 100%;
  height: 200px;
  text-align: center;
  overflow: auto;
  padding-block: 0.8rem;

  .cast {
    display: grid;
    grid-gap: 1.3rem;
    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
    width: 100%;
    height: 100%;
    padding-block: 0.8rem;

    &__member {
      text-align: center;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      font-size: 80%;
      img {
        object-fit: cover;
        width: 55px;
        height: 55px;
        border-radius: 100%;
      }
      &__name {
        color: var(--primary);
        font-weight: bold;
      }
    }
  }
}

#favs-icon,#watchlist-icon {
  font-size: 250%;
}

.bi-check-circle-fill,.bi-eye-fill {
  transition: all 0.2s;
  color: var(--primary);
}

.similar { 
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1rem;
  height: 475px;
  overflow: auto;
  gap: .5rem;
  
  @media #{$sm} {
    grid-template-columns: repeat(4, 1fr);
    gap: 1rem;
    padding: 1rem;
  }
  @media #{$lg} {
    grid-template-columns: repeat(6, 1fr);
    gap: 1rem;
  }
  @media #{$xxl} {
    height: 775px;
  }
  @media #{$xxl} {
    height: 775px;
  }
  @media #{$fourK} {
    grid-template-columns: repeat(8, 1fr);
    height: 775px;
  }
  .card{
    overflow: visible;
  }
}

